--- a/client/index.html
+++ b/client/index.html
@@ -1,5 +1,13 @@
 <html>
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no"
+    />
+  </head>
   <body>
-    <script src="./index.js"></script>
-  </body>
+		<div id="root"></div>
+		<script src="./index.js"></script>
+	</body>
 </html>
